# MFEsolver

./: .gitignore  CMakeLists.txt  README.md  main.cpp  plotmesh.cpp
FEoutput/: K.txt  U.txt
abaqus/: Job-elastic.inp  Job-elasticplastic.inp  Job_1.inp  Job_2.inp  Job_3.inp  dogbone.inp  dogbone2.inp
cons/: IsoElastic.h  MaterialBase.cpp  MaterialBase.h
elem/: C3D8.cpp  C3D8.h  ElemBase.cpp  ElemBase.h  MaterialPoint3D.h
include/: C3D8.h  ElemBase.h  FEdataModelPost.h  FiniteElementModel.h  FiniteElementSolver.h  Math.h  Tools.h
material/: IdealElastoplastic.cpp  IdealElastoplastic.h  IsotropicHarden.cpp  IsotropicHarden.h  LinearElastic.cpp  LinearElastic.h  LinearElasticMaterial.cpp  LinearElasticMaterial.h  Material.h
result/: Displacement.txt  PrincipalStrain.txt  PrincipalStress.txt  Strain.txt  Stress.txt
src/: C3D8.cpp  ElemBase.cpp  FEdataModelPost.cpp  FiniteElementModel.cpp  FiniteElementSolver.cpp  Math.cpp  Spinner.cpp  Tools.cpp
vtksample/: plotcase1.cpp  plotcase2.cpp  plotcase3.cpp  vtkPoints.cpp  vtkUnstructuredGrid.cpp
